Update styles files

--- a/src/sass/pages/Home.module.scss
+++ b/src/sass/pages/Home.module.scss
@@ -3,7 +3,7 @@
 
 .search{
     margin-bottom: 5rem;
-    background-color: rgba($red, .05);
+    background-color: $pale-red;
     padding: 5rem 3rem;
     border-radius: .5rem;
 
