--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -6,5 +6,7 @@ $black: #141414;
 $black-2: #0a0908;
 $soft-gray: #f1f1f1;
 $red: #F03434;
+$pale-red: rgba($red, .05);
+$blue: #1A8CD8;
 
 $main-font: 'Archivo', sans-serif;
