--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -17,10 +17,22 @@
     padding: 1.2rem 1.5rem;
     cursor: pointer;
     transition: .3s;
+
+    &:hover{
+        background-color: $white;
+        color: $black;
+        border-color: $black;
+    }
 }
 
 @mixin desktop-size() {
     @media(max-width: 1000px) {
+        @content;
+    }
+}
+
+@mixin tablet-size() {
+    @media(max-width: 750px) {
         @content;
     }
 }
