--- a/src/sass/pages/FormSection.module.scss
+++ b/src/sass/pages/FormSection.module.scss
@@ -22,6 +22,18 @@
 
         .container__form {
 
+            .container__form_error{
+                width: 100%;
+                margin-bottom: 2rem;
+                background-color: rgba($red, .15);
+                color: $red;
+                font-size: 1.5rem;
+                font-weight: 500;
+                border-radius: .5rem;
+                padding: 1rem;
+                text-align: center;
+            }
+
             fieldset{
 
                 border: none;
@@ -29,11 +41,17 @@
                 position: relative;
 
                 small{
+                    display: flex;
+                    align-items: center;
                     position: absolute;
                     right: 0;
                     bottom: -1.7rem;
                     color: $soft-red;
                     font-weight: 500;
+
+                    svg{
+                        margin-right: .2rem;
+                    }
                 }
 
                 label{
@@ -65,6 +83,16 @@
                 @include button-style;
                 width: 100%;
                 margin: 2rem 0;
+            }
+
+            .container__form_loading{
+                @include button-style;
+                width: 100%;
+                margin: 2rem 0;
+
+                &:hover{
+                    background-color: $black;
+                }
             }
 
             .error{
