--- a/src/sass/components/Navbar.module.scss
+++ b/src/sass/components/Navbar.module.scss
@@ -11,12 +11,39 @@
         display: flex;
         align-items: center;
 
+        div{
+            display: flex;
+            align-items: center;
+        }
+
         .navbar__auth_login{
             color: $gray;
             margin-right: 2.5rem;
 
             &:hover{
                 text-decoration: underline;
+            }
+        }
+
+        .navbar__auth_logout{
+            margin-left: 2.5rem;
+            display: flex;
+            align-items: center;
+            background-color: transparent;
+            color: $gray;
+            border: none;
+            font-family: inherit;
+            font-size: 1.6rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: .3s;
+
+            &:hover{
+                color: $red !important;
+            }
+
+            span{
+                margin-right: .5rem;
             }
         }
     }
