--- a/src/sass/components/Navbar.module.scss
+++ b/src/sass/components/Navbar.module.scss
@@ -1,4 +1,5 @@
 @import '../variables.scss';
+@import '../mixins.scss';
 
 .navbar{
     margin-bottom: 2rem;
@@ -25,8 +26,19 @@
             }
         }
 
+        .navbar__auth_name{
+            font-weight: 600;
+
+            @include mobile-size{
+                max-width: 10rem;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+        }
+
         .navbar__auth_logout{
-            margin-left: 2.5rem;
+            margin-left: 2rem;
             display: flex;
             align-items: center;
             background-color: transparent;
