--- a/src/sass/components/CampCard.module.scss
+++ b/src/sass/components/CampCard.module.scss
@@ -59,4 +59,20 @@
     &:hover img {
         transform: scale(1.15);
     }
+
+    &:hover .image__dashboard {
+        transform: scale(1) !important;
+    }
+
+    .card__buttons {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+
+        button {
+            @include button-style;
+            width: 100%;
+            font-size: 1.3rem;
+        }
+    }
 }
